[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "JSON-RPC 2.0 websocket client implementation."
documentation = "https://docs.rs/jsonrpc-ws-client/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-ws-client"
repository = "https://github.com/paritytech/jsonrpc"
version = "11.0.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[dependencies]
failure = "0.1"
futures = "0.1"
jsonrpc-core = { version = "11.0", path = "../../core" }
jsonrpc-client = { version = "11.0", path = "../../client" }
log = "0.4"
tokio = "0.1"
websocket = "0.22"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
